--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Tom's Morale</title>
+  <title>Tom&rsquo;s Morale</title>
   <link rel="stylesheet" type="text/css" href="/css/meter.css" />
 </head>
 <body>
   <div class="meter">
-    <h1>Tom's Morale</h1>
+    <h1>Tom&rsquo;s Morale</h1>
     <input type="text" data-bgColor="#313131" data-angleOffset="-125" data-angleArc="250" value="0" data-width="700" data-height="700" data-min="0" data-max="100" />
   </div>
 
